[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "quantalogic-pythonbox"
version = "0.1.0"
authors = [
  { name="Raphael Mansuy", email="raphael.mansuy@quantalogic.app" },
]
description = "A Python sandbox environment for implementing and testing CodeAct AI Agents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/quantalogic/quantalogic-pythonbox"
"Bug Tracker" = "https://github.com/quantalogic/quantalogic-pythonbox/issues"

[tool.poetry]
name = "quantalogic-pythonbox"
version = "0.8.0"
description = "A Python sandbox environment for implementing and testing CodeAct AI Agents."
authors = ["Raphael Mansuy <raphael.mansuy@quantalogic.app>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
