[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "quantalogic-pythonbox"
version = "0.9.10"
description = "A Python sandbox environment for implementing and testing CodeAct AI Agents."
authors = [
  {name = "Raphael Mansuy", email = "raphael.mansuy@quantalogic.app"}
]
readme = "README.md"
license = "Apache-2.0"

[project.urls]
"Homepage" = "https://github.com/quantalogic/quantalogic-pythonbox"
"Bug Tracker" = "https://github.com/quantalogic/quantalogic-pythonbox/issues"

[tool.poetry]
name = "quantalogic-pythonbox"
version = "0.8.9"
description = "A Python sandbox environment for implementing and testing CodeAct AI Agents."
authors = ["Raphael Mansuy <raphael.mansuy@quantalogic.app>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/quantalogic/quantalogic-pythonbox"
homepage = "https://github.com/quantalogic/quantalogic-pythonbox"
documentation = "https://github.com/quantalogic/quantalogic-pythonbox#readme"
keywords = ["sandbox", "python", "codeact", "agent", "ast"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Interpreters",
]

[tool.poetry.dependencies]
python = ">=3.9"
psutil = "^7.0.0"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/quantalogic/quantalogic-pythonbox/issues"
